# hLib

./: .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  COPYRIGHT  Pipfile  README.md  ideas.md  style_guide.txt  template.java  template.py
18.700 Problem Sets/PS1/: bash_profile  ps1.tex
2020 December/bronze/: abc.java  rut.java
2020 December/silver/: cow.java
2020december/bronze/: daisy.java
2020december/silver/: rect.java
Algorithms-and-Structures/: DisjointSet.java  Kruskals.java  dijkstra.java
Basic Series/: series.aux  series.tex
abandoned/: README.md
abandoned/scripts/: cpp_lint.py
c++/include/: linked_list.hpp
c++/src/: least_common_ancestor.cpp
comp/silver/: cv.java  rect.java  rut.java
cryptopals/set1/: NowThis on Instagram_ “Eva Schloss, the 91-year-old friend & stepsister of Anne Frank and a Holocaust survivor herself, compared former President Donald Trump to…”.html  a.out  compile.zsh  data.txt  des.py  progress.txt  xor_breaker
examples/: header.txt  usage.cpp
hlib/: io.h  memory.h
hlibc/: Makefile
hlibc/src/: io.c  test.c
hlibc/tests/: io.test.c  test.c
hlibpy/: Makefile
hlibpy/hlibpy/: ngetopt.py
hlibpy/tests/: test_ngetopt.py
lib/: Vector.cpp  Vector.hpp  array2d.cpp  doc.txt  lfsr  lfsr.cpp  matrix.hpp
lib/algorithms/: Kruskals.java  bipartite.hpp  least_common_ancestor.cpp
lib/c++/: bipartite.cpp  (+5 more)
misc/: english.json  frequency_analysis.ipynb
src/: argument_pack.h  functional.h  main.cpp  printable.h  printer.h  sequence.h
tools/: README.md  copyright.py
(+431 files in other folders)
